--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [project]
 	description = Packaging content for packstack (distgit)
 [access "refs/*"]
-	owner = group packstack-distgit-ptl
+  read = group packstack-distgit-core
+  owner = group packstack-distgit-ptl
+[access "refs/heads/*"]
+	label-Code-Review = -2..+2 group packstack-distgit-core
+	label-Code-Review = -2..+2 group packstack-distgit-ptl
+	label-Verified = -2..+2 group packstack-distgit-ptl
+	label-Workflow = -1..+1 group packstack-distgit-core
+	label-Workflow = -1..+1 group packstack-distgit-ptl
+	label-Workflow = -1..+0 group Registered Users
+	submit = group packstack-distgit-ptl
+	read = group packstack-distgit-core
+    read = group Registered Users
+[access "refs/meta/config"]
+    read = group packstack-distgit-core
+    read = group Registered Users
+[receive]
+	requireChangeId = true
+[submit]
+	mergeContent = false
+	action = fast forward only
