--- a/project.config
+++ b/project.config
@@ -1,21 +1,21 @@
 [project]
 	description = Packaging content for packstack (distgit)
 [access "refs/*"]
-  read = group packstack-distgit-core
+  read = group openstack/packstack-distgit-core
   owner = group openstack/packstack-distgit-ptl
 [access "refs/heads/*"]
+	label-Code-Review = -2..+2 group openstack/packstack-distgit-core
 	label-Code-Review = -2..+2 group openstack/packstack-distgit-ptl
-	label-Code-Review = -2..+2 group packstack-distgit-core
 	label-Verified = -2..+2 group openstack/packstack-distgit-ptl
+	label-Workflow = -1..+1 group openstack/packstack-distgit-core
 	label-Workflow = -1..+1 group openstack/packstack-distgit-ptl
-	label-Workflow = -1..+1 group packstack-distgit-core
 	label-Workflow = -1..+0 group Registered Users
 	submit = group openstack/packstack-distgit-ptl
 	read = group Registered Users
-    read = group packstack-distgit-core
+    read = group openstack/packstack-distgit-core
 [access "refs/meta/config"]
     read = group Registered Users
-    read = group packstack-distgit-core
+    read = group openstack/packstack-distgit-core
 [receive]
 	requireChangeId = true
 [submit]
